--- a/src/editor.scss
+++ b/src/editor.scss
@@ -2,7 +2,7 @@
  * The following styles get applied inside the editor only.
  */
 
- .wp-block-staff-direcotry-guide-staff-profile {
+.wp-block-sceniber-staff-profile {
 	display: block;
 	padding: 2rem;
 	border: 2px #aaa dashed;
@@ -12,23 +12,22 @@
 		margin: 0 0 1rem 0;
 		padding: 0;
 	}
+}
+.fsd-property-meta-details__grid {
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: 2rem;
+	margin-block: 2rem;
+}
 
-	.fsd-property-meta-details__grid {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		gap: 2rem;
-		margin-block: 2rem;
-	}
+.fsd-property-meta-details__preview {
+	background: white;
+	border-radius: 8px;
+	box-shadow: 0px 4px 12px rgb(0,0,0,0.15);
+	padding: 2rem;
+}
 
-	.fsd-property-meta-details__preview {
-		background: white;
-		border-radius: 8px;
-		box-shadow: 0px 4px 12px rgb(0,0,0,0.15);
-		padding: 2rem;
-	}
-
-	.components-input-control__prefix {
-		padding-left: 8px;
-		display: inline-block;
-	}
+.components-input-control__prefix {
+	padding-left: 8px;
+	display: inline-block;
 }
