--- a/templates/single-staff.html
+++ b/templates/single-staff.html
@@ -14,10 +14,12 @@
 		<div style="margin-top:0;margin-bottom:0;height:var(--wp--preset--spacing--30)" aria-hidden="true"
 			class="wp-block-spacer"></div>
 		<!-- /wp:spacer -->
+
+		<!-- wp:post-featured-image {"style":{"spacing":{"margin":{"bottom":"var:preset|spacing|40"}}}} /-->
 	</div>
 	<!-- /wp:group -->
 
-	<!-- wp:post-content {"lock":{"move":false,"remove":true},"layout":{"type":"constrained","contentSize":"800px","wideSize":"1000px"}} /-->
+	<!-- wp:post-content {"lock":{"move":false,"remove":true},"layout":{"type":"constrained"}} /-->
 </main>
 <!-- /wp:group -->
 
